@@ -79,6 +79,8 @@ static int freebob_am824_xmit(char *data,
 							  freebob_connection_t *connection);
 			       
 
+int freebob_streaming_reset_playback_streams(freebob_device_t *dev);
+
 int g_verbose=0;
 
 freebob_device_t *freebob_streaming_init (freebob_device_info_t *device_info, freebob_options_t options) {
@@ -825,8 +827,16 @@ int freebob_streaming_start(freebob_device_t *dev) {
 		return -1;
 	}
 	
+	// reset the playback streams
+	if((err=freebob_streaming_reset_playback_streams(dev))<0) {
+ 		// TODO: cleanup
+		printError("Could not reset playback streams.\n");
+		return err;
+	}
+
 	// put nb_periods*period_size of null frames into the playback buffers
 	if((err=freebob_streaming_prefill_playback_streams(dev))<0) {
+		// TODO: cleanup
 		printError("Could not prefill playback streams.\n");
 		return err;
 	}
